[package]
name = "choot"
version = "0.1.0"
authors = ["David Coles <coles.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["cargo", "derive"] }
nix = "0.25.0"
